# AutoCrawler

./: .gitignore  README.md  automation_system.py  config_manager.py  config_template.yaml  cs_paper_crawler.py  email.py  llm_api.py  llm_filter_test_results.json  main.py  pyproject.toml  report_generator.py  requirements.txt  run.bat  run.sh
250822/: all_papers_20250822_015354.json  all_papers_20250822_015626.json  all_papers_20250822_020011.json  crawl_summary_20250822_015354.json  crawl_summary_20250822_015626.json  crawl_summary_20250822_020011.json  后训练_20250822_015354.json  后训练_20250822_015626.json  后训练_20250822_020011.json  多模态_20250822_015354.json  多模态_20250822_015626.json  多模态_20250822_020011.json  大模型_20250822_015354.json  大模型_20250822_015626.json  大模型_20250822_020011.json  强化学习_20250822_015354.json  强化学习_20250822_015626.json  强化学习_20250822_020011.json  微调_20250822_015354.json  微调_20250822_015626.json  微调_20250822_020011.json  智能体_20250822_015354.json  智能体_20250822_015626.json  智能体_20250822_020011.json  检索增强生成_20250822_015354.json  检索增强生成_20250822_015626.json  检索增强生成_20250822_020011.json  预训练_20250822_015354.json  预训练_20250822_015626.json  预训练_20250822_020011.json
