[project]
name = "autocraw-gmail"
version = "0.1.0"
description = "Gmail自动发送邮件脚本，支持Markdown格式和多种附件类型"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.4.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.54.0",
    "beautifulsoup4>=4.13.4",
    "openai>=1.100.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
